--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,16 @@
   </h1>
   
 </div>
-<h2>Here are some links to help you start: </h2>
+<h2>Author: </h2>
 <ul>
   <li>
-    <h2>{{ name }}</h2>
+    <h2>{{ author.author }}</h2>
   </li>
   <li>
-    <h2><a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h2>
+    <h2>{{ author.birthday }}</h2>
   </li>
   <li>
-    <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
+    <h2>{{ author.birthPlace }}</h2>
   </li>
 </ul>
 
