--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,8 +18,10 @@
   </li>
 </ul>
 
-<div *ngFor="let book of books"> 
-  <a href={{book.purchaseLink}}><p>{{ book.title }}</p></a>
-  <p>{{ book.PublishDate }}</p>
-  <img src="{{ book.imageUrl }}" alt="book cover">
+<div class="row">
+  <div class="col-md-3" *ngFor="let book of books"> 
+    <a href={{book.purchaseLink}}><p>{{ book.title }}</p></a>
+    <p>{{ book.PublishDate }}</p>
+    <img src="{{ book.imageUrl }}" alt="book cover">
+  </div>
 </div>
