--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,10 +18,12 @@
   </li>
 </ul>
 
-<div class="row">
-  <div class="col-md-3" *ngFor="let book of books"> 
-    <a href={{book.purchaseLink}}><p>{{ book.title }}</p></a>
-    <p>{{ book.PublishDate }}</p>
-    <img src="{{ book.imageUrl }}" alt="book cover">
+<div class="container">
+  <div class="row">
+    <div class="col-md-6" *ngFor="let book of books"> 
+      <a href={{book.purchaseLink}}><p>{{ book.title }}</p></a>
+      <p>{{ book.PublishDate }}</p>
+      <img src="{{ book.imageUrl }}" alt="book cover">
+    </div>
   </div>
 </div>
