Added custom css to app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,15 +6,15 @@
   
 </div>
 <h2>Author: </h2>
-<ul>
+<ul class="author">
   <li>
-    <h2>{{ author.name }}</h2>
+    <p>Name: {{ author.name }}</p>
   </li>
   <li>
-    <h2>{{ author.birthday }}</h2>
+    <p>Birthday: {{ author.birthday }}</p>
   </li>
   <li>
-    <h2>{{ author.birthPlace }}</h2>
+    <p>Birth Place: {{ author.birthPlace }}</p>
   </li>
 </ul>
 
