--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.author {
+	list-style-type: none;	
+}
+
+img {
+	padding: 10px;
+}
