--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,10 +20,12 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-6" *ngFor="let book of books"> 
-      <a href={{book.purchaseLink}}><p>{{ book.title }}</p></a>
-      <p>{{ book.PublishDate }}</p>
-      <img src="{{ book.imageUrl }}" alt="book cover">
+    <div class="col-md-6" *ngFor="let book of books">
+      <div class="card" style="width: 18rem; background-color: #DEBE8E">
+        <a href={{book.purchaseLink}}><p>Title: {{ book.title }}</p></a>
+        <p>Published: {{ book.PublishDate }}</p>
+        <img src="{{ book.imageUrl }}" alt="book cover">
+      </div>
     </div>
   </div>
 </div>
