--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
-  </h1>
-  
+  </h1> 
 </div>
+
 <h2>Author: </h2>
 <ul class="author">
   <li>
@@ -21,10 +21,12 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6" *ngFor="let book of books">
-      <div class="card" style="width: 18rem; background-color: #DEBE8E">
-        <a href={{book.purchaseLink}}><p>Title: {{ book.title }}</p></a>
-        <p>Published: {{ book.PublishDate }}</p>
-        <img src="{{ book.imageUrl }}" alt="book cover">
+      <div class="card m-sm-1" style="width: 22rem; background-color: #DEBE8E">
+        <img class="card-img-top"src="{{ book.imageUrl }}" alt="book cover">
+        <div class="card-body">
+          <a href={{book.purchaseLink}}><p>Title: {{ book.title }}</p></a>
+          <p>Published: {{ book.PublishDate }}</p>
+        </div>
       </div>
     </div>
   </div>
