--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,3 @@
-.author {
-	list-style-type: none;
-}
-
 h2 {
 	padding-left: 15px;
 }
@@ -9,3 +5,13 @@ h2 {
 img {
 	padding: 10px;
 }
+
+.container-fluid {
+	background-color: #C69554;
+}
+
+.author {
+	list-style-type: none;
+	background-color: #EE6C35;
+}
+
