Added style/margin to sort buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,9 +22,8 @@
   </div>
 
   <div class="row">
-    <button class="btn" type="submit" (click)="alphaSort()">Sort Alphabetically by Title</button>
-    <button class="btn type
-    submit" (click)="dateSort()">Sort by Publish Date</button>
+    <button class="btn btn-warning" type="submit" (click)="alphaSort()">Sort Alphabetically by Title</button>
+    <button class="btn btn-warning" type="submit" (click)="dateSort()">Sort by Publish Date</button>
   </div>
 
   <div class="row">
