--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
   
   <div class="author">
     <h2>Author: </h2>
-    <ul>
+    <ul class="author">
       <li>
-        <p>Name: {{ author.name }}</p>
+        <p>Name: {{ author.author }}</p>
       </li>
       <li>
         <p>Birthday: {{ author.birthday }}</p>
